// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update-dotnet-sdk %s when dry-run is true running the action generates the expected Git commit history 1`] = `
[
  "Update .NET SDK",
  "",
  "Update .NET SDK to version 6.0.413.",
  "",
  "---",
  "updated-dependencies:",
  "- dependency-name: Microsoft.NET.Sdk",
  "  dependency-type: direct:production",
  "  update-type: version-update:semver-patch",
  "...",
  "",
  "Signed-off-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>",
]
`;

exports[`update-dotnet-sdk %s when dry-run is true running the action the branch-name output is correct 1`] = `""`;

exports[`update-dotnet-sdk %s when dry-run is true running the action the pull-request-html-url output is correct 1`] = `""`;

exports[`update-dotnet-sdk %s when dry-run is true running the action the pull-request-number output is correct 1`] = `"0"`;

exports[`update-dotnet-sdk %s when dry-run is true running the action the sdk-updated output is correct 1`] = `"true"`;

exports[`update-dotnet-sdk %s when dry-run is true running the action the sdk-version output is correct 1`] = `"6.0.413"`;

exports[`update-dotnet-sdk %s when dry-run is true running the action the security output is correct 1`] = `"true"`;

exports[`update-dotnet-sdk %s when dry-run is true running the action updates the SDK version in global.json 1`] = `"6.0.413"`;

exports[`update-dotnet-sdk 2.1 for the 2.1.500 SDK with a commit prefix of "" running the action generates the expected Git commit history 1`] = `
[
  "Update .NET SDK",
  "",
  "Update .NET SDK to version 2.1.818.",
  "",
  "---",
  "updated-dependencies:",
  "- dependency-name: Microsoft.NET.Sdk",
  "  dependency-type: direct:production",
  "  update-type: version-update:semver-patch",
  "...",
  "",
  "Signed-off-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>",
  "",
  "Initial commit",
]
`;

exports[`update-dotnet-sdk 2.1 for the 2.1.500 SDK with a commit prefix of "" running the action generates the expected Git diff 1`] = `
"diff --git a/global.json b/global.json
index b62f6cc..8c6caf1 100644
--- a/global.json
+++ b/global.json
@@ -1,5 +1,5 @@
 {
   "sdk": {
-    "version": "2.1.500"
+    "version": "2.1.818"
   }
 }"
`;

exports[`update-dotnet-sdk 2.1 for the 2.1.500 SDK with a commit prefix of "" running the action the branch-name output is correct 1`] = `"update-dotnet-sdk-2.1.818"`;

exports[`update-dotnet-sdk 2.1 for the 2.1.500 SDK with a commit prefix of "" running the action the pull-request-html-url output is correct 1`] = `"https://github.local/martincostello/update-dotnet-sdk/pull/42"`;

exports[`update-dotnet-sdk 2.1 for the 2.1.500 SDK with a commit prefix of "" running the action the pull-request-number output is correct 1`] = `"42"`;

exports[`update-dotnet-sdk 2.1 for the 2.1.500 SDK with a commit prefix of "" running the action the sdk-updated output is correct 1`] = `"true"`;

exports[`update-dotnet-sdk 2.1 for the 2.1.500 SDK with a commit prefix of "" running the action the sdk-version output is correct 1`] = `"2.1.818"`;

exports[`update-dotnet-sdk 2.1 for the 2.1.500 SDK with a commit prefix of "" running the action the security output is correct 1`] = `"true"`;

exports[`update-dotnet-sdk 2.1 for the 2.1.500 SDK with a commit prefix of "" running the action updates the SDK version in global.json 1`] = `"2.1.818"`;

exports[`update-dotnet-sdk 2.1 when the .NET SDK is up-to-date running the action does not update the SDK version in global.json 1`] = `"2.1.818"`;

exports[`update-dotnet-sdk 2.1 when the .NET SDK is up-to-date running the action generates the expected Git commit history 1`] = `
[
  "Initial commit",
]
`;

exports[`update-dotnet-sdk 2.1 when the .NET SDK is up-to-date running the action the branch-name output is correct 1`] = `""`;

exports[`update-dotnet-sdk 2.1 when the .NET SDK is up-to-date running the action the pull-request-html-url output is correct 1`] = `""`;

exports[`update-dotnet-sdk 2.1 when the .NET SDK is up-to-date running the action the pull-request-number output is correct 1`] = `"0"`;

exports[`update-dotnet-sdk 2.1 when the .NET SDK is up-to-date running the action the sdk-updated output is correct 1`] = `"false"`;

exports[`update-dotnet-sdk 2.1 when the .NET SDK is up-to-date running the action the sdk-version output is correct 1`] = `"2.1.818"`;

exports[`update-dotnet-sdk 2.1 when the .NET SDK is up-to-date running the action the security output is correct 1`] = `"false"`;

exports[`update-dotnet-sdk 3.1 for the 3.1.201 SDK with a commit prefix of "" running the action generates the expected Git commit history 1`] = `
[
  "Update .NET SDK",
  "",
  "Update .NET SDK to version 3.1.426.",
  "",
  "---",
  "updated-dependencies:",
  "- dependency-name: Microsoft.NET.Sdk",
  "  dependency-type: direct:production",
  "  update-type: version-update:semver-patch",
  "...",
  "",
  "Signed-off-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>",
  "",
  "Initial commit",
]
`;

exports[`update-dotnet-sdk 3.1 for the 3.1.201 SDK with a commit prefix of "" running the action generates the expected Git diff 1`] = `
"diff --git a/global.json b/global.json
index 05d0ae3..0bd28be 100644
--- a/global.json
+++ b/global.json
@@ -1,5 +1,5 @@
 {
   "sdk": {
-    "version": "3.1.201"
+    "version": "3.1.426"
   }
 }"
`;

exports[`update-dotnet-sdk 3.1 for the 3.1.201 SDK with a commit prefix of "" running the action the branch-name output is correct 1`] = `"update-dotnet-sdk-3.1.426"`;

exports[`update-dotnet-sdk 3.1 for the 3.1.201 SDK with a commit prefix of "" running the action the pull-request-html-url output is correct 1`] = `"https://github.local/martincostello/update-dotnet-sdk/pull/42"`;

exports[`update-dotnet-sdk 3.1 for the 3.1.201 SDK with a commit prefix of "" running the action the pull-request-number output is correct 1`] = `"42"`;

exports[`update-dotnet-sdk 3.1 for the 3.1.201 SDK with a commit prefix of "" running the action the sdk-updated output is correct 1`] = `"true"`;

exports[`update-dotnet-sdk 3.1 for the 3.1.201 SDK with a commit prefix of "" running the action the sdk-version output is correct 1`] = `"3.1.426"`;

exports[`update-dotnet-sdk 3.1 for the 3.1.201 SDK with a commit prefix of "" running the action the security output is correct 1`] = `"true"`;

exports[`update-dotnet-sdk 3.1 for the 3.1.201 SDK with a commit prefix of "" running the action updates the SDK version in global.json 1`] = `"3.1.426"`;

exports[`update-dotnet-sdk 3.1 for the 3.1.201 SDK with a commit prefix of "chore:" running the action generates the expected Git commit history 1`] = `
[
  "chore: Update .NET SDK",
  "",
  "Update .NET SDK to version 3.1.426.",
  "",
  "---",
  "updated-dependencies:",
  "- dependency-name: Microsoft.NET.Sdk",
  "  dependency-type: direct:production",
  "  update-type: version-update:semver-patch",
  "...",
  "",
  "Signed-off-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>",
  "",
  "Initial commit",
]
`;

exports[`update-dotnet-sdk 3.1 for the 3.1.201 SDK with a commit prefix of "chore:" running the action generates the expected Git diff 1`] = `
"diff --git a/global.json b/global.json
index 05d0ae3..0bd28be 100644
--- a/global.json
+++ b/global.json
@@ -1,5 +1,5 @@
 {
   "sdk": {
-    "version": "3.1.201"
+    "version": "3.1.426"
   }
 }"
`;

exports[`update-dotnet-sdk 3.1 for the 3.1.201 SDK with a commit prefix of "chore:" running the action the branch-name output is correct 1`] = `"update-dotnet-sdk-3.1.426"`;

exports[`update-dotnet-sdk 3.1 for the 3.1.201 SDK with a commit prefix of "chore:" running the action the pull-request-html-url output is correct 1`] = `"https://github.local/martincostello/update-dotnet-sdk/pull/42"`;

exports[`update-dotnet-sdk 3.1 for the 3.1.201 SDK with a commit prefix of "chore:" running the action the pull-request-number output is correct 1`] = `"42"`;

exports[`update-dotnet-sdk 3.1 for the 3.1.201 SDK with a commit prefix of "chore:" running the action the sdk-updated output is correct 1`] = `"true"`;

exports[`update-dotnet-sdk 3.1 for the 3.1.201 SDK with a commit prefix of "chore:" running the action the sdk-version output is correct 1`] = `"3.1.426"`;

exports[`update-dotnet-sdk 3.1 for the 3.1.201 SDK with a commit prefix of "chore:" running the action the security output is correct 1`] = `"true"`;

exports[`update-dotnet-sdk 3.1 for the 3.1.201 SDK with a commit prefix of "chore:" running the action updates the SDK version in global.json 1`] = `"3.1.426"`;

exports[`update-dotnet-sdk 3.1 when the .NET SDK is up-to-date running the action does not update the SDK version in global.json 1`] = `"3.1.426"`;

exports[`update-dotnet-sdk 3.1 when the .NET SDK is up-to-date running the action generates the expected Git commit history 1`] = `
[
  "Initial commit",
]
`;

exports[`update-dotnet-sdk 3.1 when the .NET SDK is up-to-date running the action the branch-name output is correct 1`] = `""`;

exports[`update-dotnet-sdk 3.1 when the .NET SDK is up-to-date running the action the pull-request-html-url output is correct 1`] = `""`;

exports[`update-dotnet-sdk 3.1 when the .NET SDK is up-to-date running the action the pull-request-number output is correct 1`] = `"0"`;

exports[`update-dotnet-sdk 3.1 when the .NET SDK is up-to-date running the action the sdk-updated output is correct 1`] = `"false"`;

exports[`update-dotnet-sdk 3.1 when the .NET SDK is up-to-date running the action the sdk-version output is correct 1`] = `"3.1.426"`;

exports[`update-dotnet-sdk 3.1 when the .NET SDK is up-to-date running the action the security output is correct 1`] = `"false"`;

exports[`update-dotnet-sdk 6.0 for the 6.0.100 SDK with a commit prefix of "" running the action generates the expected Git commit history 1`] = `
[
  "Update .NET SDK",
  "",
  "Update .NET SDK to version 6.0.413.",
  "",
  "---",
  "updated-dependencies:",
  "- dependency-name: Microsoft.NET.Sdk",
  "  dependency-type: direct:production",
  "  update-type: version-update:semver-patch",
  "...",
  "",
  "Signed-off-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>",
  "",
  "Initial commit",
]
`;

exports[`update-dotnet-sdk 6.0 for the 6.0.100 SDK with a commit prefix of "" running the action generates the expected Git diff 1`] = `
"diff --git a/global.json b/global.json
index 0470208..cb97ae9 100644
--- a/global.json
+++ b/global.json
@@ -1,5 +1,5 @@
 {
   "sdk": {
-    "version": "6.0.100"
+    "version": "6.0.413"
   }
 }"
`;

exports[`update-dotnet-sdk 6.0 for the 6.0.100 SDK with a commit prefix of "" running the action the branch-name output is correct 1`] = `"update-dotnet-sdk-6.0.413"`;

exports[`update-dotnet-sdk 6.0 for the 6.0.100 SDK with a commit prefix of "" running the action the pull-request-html-url output is correct 1`] = `"https://github.local/martincostello/update-dotnet-sdk/pull/42"`;

exports[`update-dotnet-sdk 6.0 for the 6.0.100 SDK with a commit prefix of "" running the action the pull-request-number output is correct 1`] = `"42"`;

exports[`update-dotnet-sdk 6.0 for the 6.0.100 SDK with a commit prefix of "" running the action the sdk-updated output is correct 1`] = `"true"`;

exports[`update-dotnet-sdk 6.0 for the 6.0.100 SDK with a commit prefix of "" running the action the sdk-version output is correct 1`] = `"6.0.413"`;

exports[`update-dotnet-sdk 6.0 for the 6.0.100 SDK with a commit prefix of "" running the action the security output is correct 1`] = `"true"`;

exports[`update-dotnet-sdk 6.0 for the 6.0.100 SDK with a commit prefix of "" running the action updates the SDK version in global.json 1`] = `"6.0.413"`;

exports[`update-dotnet-sdk 6.0 when the .NET SDK is up-to-date running the action does not update the SDK version in global.json 1`] = `"6.0.413"`;

exports[`update-dotnet-sdk 6.0 when the .NET SDK is up-to-date running the action generates the expected Git commit history 1`] = `
[
  "Initial commit",
]
`;

exports[`update-dotnet-sdk 6.0 when the .NET SDK is up-to-date running the action the branch-name output is correct 1`] = `""`;

exports[`update-dotnet-sdk 6.0 when the .NET SDK is up-to-date running the action the pull-request-html-url output is correct 1`] = `""`;

exports[`update-dotnet-sdk 6.0 when the .NET SDK is up-to-date running the action the pull-request-number output is correct 1`] = `"0"`;

exports[`update-dotnet-sdk 6.0 when the .NET SDK is up-to-date running the action the sdk-updated output is correct 1`] = `"false"`;

exports[`update-dotnet-sdk 6.0 when the .NET SDK is up-to-date running the action the sdk-version output is correct 1`] = `"6.0.413"`;

exports[`update-dotnet-sdk 6.0 when the .NET SDK is up-to-date running the action the security output is correct 1`] = `"false"`;

exports[`update-dotnet-sdk 7.0 for the 7.0.100 SDK with a commit prefix of "" running the action generates the expected Git commit history 1`] = `
[
  "Update .NET SDK",
  "",
  "Update .NET SDK to version 7.0.400.",
  "",
  "---",
  "updated-dependencies:",
  "- dependency-name: Microsoft.NET.Sdk",
  "  dependency-type: direct:production",
  "  update-type: version-update:semver-patch",
  "...",
  "",
  "Signed-off-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>",
  "",
  "Initial commit",
]
`;

exports[`update-dotnet-sdk 7.0 for the 7.0.100 SDK with a commit prefix of "" running the action generates the expected Git diff 1`] = `
"diff --git a/global.json b/global.json
index 70e3dcc..06ce1b4 100644
--- a/global.json
+++ b/global.json
@@ -1,5 +1,5 @@
 {
   "sdk": {
-    "version": "7.0.100"
+    "version": "7.0.400"
   }
 }"
`;

exports[`update-dotnet-sdk 7.0 for the 7.0.100 SDK with a commit prefix of "" running the action the branch-name output is correct 1`] = `"update-dotnet-sdk-7.0.400"`;

exports[`update-dotnet-sdk 7.0 for the 7.0.100 SDK with a commit prefix of "" running the action the pull-request-html-url output is correct 1`] = `"https://github.local/martincostello/update-dotnet-sdk/pull/42"`;

exports[`update-dotnet-sdk 7.0 for the 7.0.100 SDK with a commit prefix of "" running the action the pull-request-number output is correct 1`] = `"42"`;

exports[`update-dotnet-sdk 7.0 for the 7.0.100 SDK with a commit prefix of "" running the action the sdk-updated output is correct 1`] = `"true"`;

exports[`update-dotnet-sdk 7.0 for the 7.0.100 SDK with a commit prefix of "" running the action the sdk-version output is correct 1`] = `"7.0.400"`;

exports[`update-dotnet-sdk 7.0 for the 7.0.100 SDK with a commit prefix of "" running the action the security output is correct 1`] = `"true"`;

exports[`update-dotnet-sdk 7.0 for the 7.0.100 SDK with a commit prefix of "" running the action updates the SDK version in global.json 1`] = `"7.0.400"`;

exports[`update-dotnet-sdk 7.0 when the .NET SDK is up-to-date running the action does not update the SDK version in global.json 1`] = `"7.0.400"`;

exports[`update-dotnet-sdk 7.0 when the .NET SDK is up-to-date running the action generates the expected Git commit history 1`] = `
[
  "Initial commit",
]
`;

exports[`update-dotnet-sdk 7.0 when the .NET SDK is up-to-date running the action the branch-name output is correct 1`] = `""`;

exports[`update-dotnet-sdk 7.0 when the .NET SDK is up-to-date running the action the pull-request-html-url output is correct 1`] = `""`;

exports[`update-dotnet-sdk 7.0 when the .NET SDK is up-to-date running the action the pull-request-number output is correct 1`] = `"0"`;

exports[`update-dotnet-sdk 7.0 when the .NET SDK is up-to-date running the action the sdk-updated output is correct 1`] = `"false"`;

exports[`update-dotnet-sdk 7.0 when the .NET SDK is up-to-date running the action the sdk-version output is correct 1`] = `"7.0.400"`;

exports[`update-dotnet-sdk 7.0 when the .NET SDK is up-to-date running the action the security output is correct 1`] = `"false"`;

exports[`update-dotnet-sdk 7.0-sdk-only for the 7.0.307 SDK with a commit prefix of "" running the action generates the expected Git commit history 1`] = `
[
  "Update .NET SDK",
  "",
  "Update .NET SDK to version 7.0.400.",
  "",
  "---",
  "updated-dependencies:",
  "- dependency-name: Microsoft.NET.Sdk",
  "  dependency-type: direct:production",
  "  update-type: version-update:semver-patch",
  "...",
  "",
  "Signed-off-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>",
  "",
  "Initial commit",
]
`;

exports[`update-dotnet-sdk 7.0-sdk-only for the 7.0.307 SDK with a commit prefix of "" running the action generates the expected Git diff 1`] = `
"diff --git a/global.json b/global.json
index 5977f10..06ce1b4 100644
--- a/global.json
+++ b/global.json
@@ -1,5 +1,5 @@
 {
   "sdk": {
-    "version": "7.0.307"
+    "version": "7.0.400"
   }
 }"
`;

exports[`update-dotnet-sdk 7.0-sdk-only for the 7.0.307 SDK with a commit prefix of "" running the action the branch-name output is correct 1`] = `"update-dotnet-sdk-7.0.400"`;

exports[`update-dotnet-sdk 7.0-sdk-only for the 7.0.307 SDK with a commit prefix of "" running the action the pull-request-html-url output is correct 1`] = `"https://github.local/martincostello/update-dotnet-sdk/pull/42"`;

exports[`update-dotnet-sdk 7.0-sdk-only for the 7.0.307 SDK with a commit prefix of "" running the action the pull-request-number output is correct 1`] = `"42"`;

exports[`update-dotnet-sdk 7.0-sdk-only for the 7.0.307 SDK with a commit prefix of "" running the action the sdk-updated output is correct 1`] = `"true"`;

exports[`update-dotnet-sdk 7.0-sdk-only for the 7.0.307 SDK with a commit prefix of "" running the action the sdk-version output is correct 1`] = `"7.0.400"`;

exports[`update-dotnet-sdk 7.0-sdk-only for the 7.0.307 SDK with a commit prefix of "" running the action the security output is correct 1`] = `"true"`;

exports[`update-dotnet-sdk 7.0-sdk-only for the 7.0.307 SDK with a commit prefix of "" running the action updates the SDK version in global.json 1`] = `"7.0.400"`;

exports[`update-dotnet-sdk 8.0 for the 8.0.100-preview.6.23330.14 SDK with a commit prefix of "" running the action generates the expected Git commit history 1`] = `
[
  "Update .NET SDK",
  "",
  "Update .NET SDK to version 8.0.100-preview.7.23376.3.",
  "",
  "---",
  "updated-dependencies:",
  "- dependency-name: Microsoft.NET.Sdk",
  "  dependency-type: direct:production",
  "  update-type: version-update:semver-patch",
  "...",
  "",
  "Signed-off-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>",
  "",
  "Initial commit",
]
`;

exports[`update-dotnet-sdk 8.0 for the 8.0.100-preview.6.23330.14 SDK with a commit prefix of "" running the action generates the expected Git diff 1`] = `
"diff --git a/global.json b/global.json
index 358b066..4ba6706 100644
--- a/global.json
+++ b/global.json
@@ -1,5 +1,5 @@
 {
   "sdk": {
-    "version": "8.0.100-preview.6.23330.14"
+    "version": "8.0.100-preview.7.23376.3"
   }
 }"
`;

exports[`update-dotnet-sdk 8.0 for the 8.0.100-preview.6.23330.14 SDK with a commit prefix of "" running the action the branch-name output is correct 1`] = `"update-dotnet-sdk-8.0.100-preview.7.23376.3"`;

exports[`update-dotnet-sdk 8.0 for the 8.0.100-preview.6.23330.14 SDK with a commit prefix of "" running the action the pull-request-html-url output is correct 1`] = `"https://github.local/martincostello/update-dotnet-sdk/pull/42"`;

exports[`update-dotnet-sdk 8.0 for the 8.0.100-preview.6.23330.14 SDK with a commit prefix of "" running the action the pull-request-number output is correct 1`] = `"42"`;

exports[`update-dotnet-sdk 8.0 for the 8.0.100-preview.6.23330.14 SDK with a commit prefix of "" running the action the sdk-updated output is correct 1`] = `"true"`;

exports[`update-dotnet-sdk 8.0 for the 8.0.100-preview.6.23330.14 SDK with a commit prefix of "" running the action the sdk-version output is correct 1`] = `"8.0.100-preview.7.23376.3"`;

exports[`update-dotnet-sdk 8.0 for the 8.0.100-preview.6.23330.14 SDK with a commit prefix of "" running the action the security output is correct 1`] = `"false"`;

exports[`update-dotnet-sdk 8.0 for the 8.0.100-preview.6.23330.14 SDK with a commit prefix of "" running the action updates the SDK version in global.json 1`] = `"8.0.100-preview.7.23376.3"`;

exports[`update-dotnet-sdk 8.0 when the .NET SDK is up-to-date running the action does not update the SDK version in global.json 1`] = `"8.0.100-preview.7.23376.3"`;

exports[`update-dotnet-sdk 8.0 when the .NET SDK is up-to-date running the action generates the expected Git commit history 1`] = `
[
  "Initial commit",
]
`;

exports[`update-dotnet-sdk 8.0 when the .NET SDK is up-to-date running the action the branch-name output is correct 1`] = `""`;

exports[`update-dotnet-sdk 8.0 when the .NET SDK is up-to-date running the action the pull-request-html-url output is correct 1`] = `""`;

exports[`update-dotnet-sdk 8.0 when the .NET SDK is up-to-date running the action the pull-request-number output is correct 1`] = `"0"`;

exports[`update-dotnet-sdk 8.0 when the .NET SDK is up-to-date running the action the sdk-updated output is correct 1`] = `"false"`;

exports[`update-dotnet-sdk 8.0 when the .NET SDK is up-to-date running the action the sdk-version output is correct 1`] = `"8.0.100-preview.7.23376.3"`;

exports[`update-dotnet-sdk 8.0 when the .NET SDK is up-to-date running the action the security output is correct 1`] = `"false"`;

exports[`update-dotnet-sdk daily builds for channel "8.0" running the action generates the expected Git commit history 1`] = `
[
  "Update .NET SDK",
  "",
  "Update .NET SDK to version 8.0.100-rc.2.23424.12.",
  "",
  "---",
  "updated-dependencies:",
  "- dependency-name: Microsoft.NET.Sdk",
  "  dependency-type: direct:production",
  "  update-type: version-update:semver-patch",
  "...",
  "",
  "Signed-off-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>",
]
`;

exports[`update-dotnet-sdk daily builds for channel "8.0" running the action the branch-name output is correct 1`] = `"update-dotnet-sdk-8.0.100-preview.7.23376.3"`;

exports[`update-dotnet-sdk daily builds for channel "8.0" running the action the pull-request-html-url output is correct 1`] = `"https://github.local/martincostello/update-dotnet-sdk/pull/42"`;

exports[`update-dotnet-sdk daily builds for channel "8.0" running the action the pull-request-number output is correct 1`] = `"42"`;

exports[`update-dotnet-sdk daily builds for channel "8.0" running the action the sdk-updated output is correct 1`] = `"true"`;

exports[`update-dotnet-sdk daily builds for channel "8.0" running the action the sdk-version output is correct 1`] = `"8.0.100-rc.2.23424.12"`;

exports[`update-dotnet-sdk daily builds for channel "8.0" running the action the security output is correct 1`] = `"false"`;

exports[`update-dotnet-sdk daily builds for channel "8.0" running the action updates the SDK version in global.json 1`] = `"8.0.100-rc.2.23424.12"`;

exports[`update-dotnet-sdk daily builds for channel "8.0.1xx" running the action generates the expected Git commit history 1`] = `
[
  "Update .NET SDK",
  "",
  "Update .NET SDK to version 8.0.100-rc.2.23424.12.",
  "",
  "---",
  "updated-dependencies:",
  "- dependency-name: Microsoft.NET.Sdk",
  "  dependency-type: direct:production",
  "  update-type: version-update:semver-patch",
  "...",
  "",
  "Signed-off-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>",
]
`;

exports[`update-dotnet-sdk daily builds for channel "8.0.1xx" running the action the branch-name output is correct 1`] = `"update-dotnet-sdk-8.0.100-preview.7.23376.3"`;

exports[`update-dotnet-sdk daily builds for channel "8.0.1xx" running the action the pull-request-html-url output is correct 1`] = `"https://github.local/martincostello/update-dotnet-sdk/pull/42"`;

exports[`update-dotnet-sdk daily builds for channel "8.0.1xx" running the action the pull-request-number output is correct 1`] = `"42"`;

exports[`update-dotnet-sdk daily builds for channel "8.0.1xx" running the action the sdk-updated output is correct 1`] = `"true"`;

exports[`update-dotnet-sdk daily builds for channel "8.0.1xx" running the action the sdk-version output is correct 1`] = `"8.0.100-rc.2.23424.12"`;

exports[`update-dotnet-sdk daily builds for channel "8.0.1xx" running the action the security output is correct 1`] = `"false"`;

exports[`update-dotnet-sdk daily builds for channel "8.0.1xx" running the action updates the SDK version in global.json 1`] = `"8.0.100-rc.2.23424.12"`;

exports[`update-dotnet-sdk daily builds for channel "8.0.1xx-preview7" running the action generates the expected Git commit history 1`] = `
[
  "Update .NET SDK",
  "",
  "Update .NET SDK to version 8.0.100-preview.7.23376.3.",
  "",
  "---",
  "updated-dependencies:",
  "- dependency-name: Microsoft.NET.Sdk",
  "  dependency-type: direct:production",
  "  update-type: version-update:semver-patch",
  "...",
  "",
  "Signed-off-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>",
]
`;

exports[`update-dotnet-sdk daily builds for channel "8.0.1xx-preview7" running the action the branch-name output is correct 1`] = `"update-dotnet-sdk-8.0.100-preview.7.23376.3"`;

exports[`update-dotnet-sdk daily builds for channel "8.0.1xx-preview7" running the action the pull-request-html-url output is correct 1`] = `"https://github.local/martincostello/update-dotnet-sdk/pull/42"`;

exports[`update-dotnet-sdk daily builds for channel "8.0.1xx-preview7" running the action the pull-request-number output is correct 1`] = `"42"`;

exports[`update-dotnet-sdk daily builds for channel "8.0.1xx-preview7" running the action the sdk-updated output is correct 1`] = `"true"`;

exports[`update-dotnet-sdk daily builds for channel "8.0.1xx-preview7" running the action the sdk-version output is correct 1`] = `"8.0.100-preview.7.23376.3"`;

exports[`update-dotnet-sdk daily builds for channel "8.0.1xx-preview7" running the action the security output is correct 1`] = `"false"`;

exports[`update-dotnet-sdk daily builds for channel "8.0.1xx-preview7" running the action updates the SDK version in global.json 1`] = `"8.0.100-preview.7.23376.3"`;
